--- a/timbr/CategoryViewController.xib
+++ b/timbr/CategoryViewController.xib
@@ -29,7 +29,9 @@
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bwB-Qt-AER">
                     <rect key="frame" x="8" y="64" width="65" height="30"/>
-                    <state key="normal" title="Add Field"/>
+                    <state key="normal" title="Add Field">
+                        <color key="titleColor" red="0.51372549020000002" green="0.20392156859999999" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
                     <connections>
                         <action selector="onAddFieldButtonPress:" destination="-1" eventType="touchUpInside" id="FHJ-p1-1JZ"/>
                     </connections>
@@ -40,7 +42,9 @@
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KcH-At-24A">
                     <rect key="frame" x="523" y="64" width="69" height="30"/>
-                    <state key="normal" title="Set Image"/>
+                    <state key="normal" title="Set Image">
+                        <color key="titleColor" red="0.51372549020000002" green="0.20392156859999999" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
                     <connections>
                         <action selector="onSetImageButtonPress:" destination="-1" eventType="touchUpInside" id="VIh-hv-XJK"/>
                     </connections>
