--- a/timbr/ChartTableViewCell.xib
+++ b/timbr/ChartTableViewCell.xib
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="327" id="KGk-i7-Jjw" customClass="ChartTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="327"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="325"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="326.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="324"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="flP-Qt-ZP9">
-                        <rect key="frame" x="8" y="8" width="304" height="235"/>
+                    <view contentMode="scaleToFill" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="flP-Qt-ZP9">
+                        <rect key="frame" x="8" y="8" width="304" height="234"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="g11-cT-Jx6"/>
@@ -23,7 +23,7 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xvx-08-Utc" userLabel="Below View">
-                        <rect key="frame" x="8" y="251" width="304" height="68"/>
+                        <rect key="frame" x="8" y="249" width="304" height="68"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="Jpc-fH-f0b"/>
@@ -39,6 +39,7 @@
                     <constraint firstItem="flP-Qt-ZP9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Vjc-pA-AMV"/>
                     <constraint firstItem="flP-Qt-ZP9" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="ePl-OD-7lz"/>
                     <constraint firstAttribute="trailing" secondItem="flP-Qt-ZP9" secondAttribute="trailing" constant="8" id="ffS-ZS-HWC"/>
+                    <constraint firstItem="xvx-08-Utc" firstAttribute="top" secondItem="flP-Qt-ZP9" secondAttribute="bottom" constant="7" id="iaM-cL-WeS"/>
                     <constraint firstAttribute="bottomMargin" secondItem="xvx-08-Utc" secondAttribute="bottom" constant="-0.5" id="kXd-SL-gNH"/>
                     <constraint firstItem="xvx-08-Utc" firstAttribute="leading" secondItem="flP-Qt-ZP9" secondAttribute="leading" id="mEj-pi-tUN"/>
                     <constraint firstItem="flP-Qt-ZP9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="qg2-Z5-RQ9"/>
@@ -46,6 +47,7 @@
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
+                        <exclude reference="ePl-OD-7lz"/>
                         <exclude reference="uYC-US-yxX"/>
                     </mask>
                 </variation>
