--- a/timbr/FieldDataTableViewCell.xib
+++ b/timbr/FieldDataTableViewCell.xib
@@ -11,12 +11,12 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Field name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Thi-1c-Irl">
-                        <rect key="frame" x="8" y="8" width="61.5" height="14.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" misplaced="YES" text="Field name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Thi-1c-Irl">
+                        <rect key="frame" x="8" y="8" width="145" height="28"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -37,6 +37,7 @@
                     <constraint firstItem="Thi-1c-Irl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="RMc-Ij-LzJ"/>
                     <constraint firstItem="gjK-ou-QVw" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="ao3-P3-cBz"/>
                     <constraint firstItem="gjK-ou-QVw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="be1-Aa-bcG"/>
+                    <constraint firstItem="Thi-1c-Irl" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="h3d-7T-zrk"/>
                     <constraint firstItem="Thi-1c-Irl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="rqP-YS-YVy"/>
                 </constraints>
             </tableViewCellContentView>
