--- a/timbr/CategoryViewController.xib
+++ b/timbr/CategoryViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CategoryViewController">
@@ -17,31 +17,24 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jBd-lj-TVz">
-                    <rect key="frame" x="138" y="22" width="454" height="30"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <rect key="frame" x="8" y="37" width="584" height="30"/>
+                    <color key="textColor" red="0.51372549020000002" green="0.20392156859999999" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DSU-UV-dVV">
-                    <rect key="frame" x="8" y="22" width="120" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DSU-UV-dVV">
+                    <rect key="frame" x="8" y="8" width="128" height="21"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                    <color key="textColor" red="0.51372549020000002" green="0.20392156859999999" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bwB-Qt-AER">
-                    <rect key="frame" x="8" y="64" width="65" height="30"/>
-                    <state key="normal" title="Add Field">
-                        <color key="titleColor" red="0.51372549020000002" green="0.20392156859999999" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="onAddFieldButtonPress:" destination="-1" eventType="touchUpInside" id="FHJ-p1-1JZ"/>
-                    </connections>
-                </button>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vJV-bX-Upe">
-                    <rect key="frame" x="8" y="102" width="584" height="490"/>
+                    <rect key="frame" x="8" y="75" width="584" height="517"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KcH-At-24A">
-                    <rect key="frame" x="523" y="64" width="69" height="30"/>
+                    <rect key="frame" x="512" y="2" width="80" height="33"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
                     <state key="normal" title="Set Image">
                         <color key="titleColor" red="0.51372549020000002" green="0.20392156859999999" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
@@ -53,19 +46,33 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="DSU-UV-dVV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="0dl-Mp-jqI"/>
+                <constraint firstItem="KcH-At-24A" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="6Pf-uz-ofM"/>
                 <constraint firstAttribute="trailing" secondItem="vJV-bX-Upe" secondAttribute="trailing" constant="8" id="7Hz-dz-RrD"/>
                 <constraint firstAttribute="bottom" secondItem="vJV-bX-Upe" secondAttribute="bottom" constant="8" id="8vt-PZ-BXF"/>
                 <constraint firstAttribute="trailing" secondItem="jBd-lj-TVz" secondAttribute="trailing" constant="8" id="EgA-fj-kb8"/>
-                <constraint firstItem="bwB-Qt-AER" firstAttribute="top" secondItem="DSU-UV-dVV" secondAttribute="bottom" constant="21" id="Ieb-7R-PLB"/>
                 <constraint firstItem="vJV-bX-Upe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="S4v-8T-C2a"/>
+                <constraint firstItem="vJV-bX-Upe" firstAttribute="top" secondItem="jBd-lj-TVz" secondAttribute="bottom" constant="8" id="SKg-Vr-RCe"/>
                 <constraint firstItem="jBd-lj-TVz" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="22" id="Smx-y1-eVF"/>
+                <constraint firstAttribute="trailing" secondItem="jBd-lj-TVz" secondAttribute="trailing" constant="8" id="TPY-Gr-Ovj"/>
+                <constraint firstItem="KcH-At-24A" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="2" id="U5R-sL-ve8"/>
+                <constraint firstAttribute="trailing" secondItem="KcH-At-24A" secondAttribute="trailing" constant="8" id="U9K-Fs-MmX"/>
+                <constraint firstItem="jBd-lj-TVz" firstAttribute="top" secondItem="DSU-UV-dVV" secondAttribute="bottom" constant="8" id="War-3C-jKQ"/>
+                <constraint firstItem="jBd-lj-TVz" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="Y5z-RT-bKT"/>
                 <constraint firstAttribute="trailing" secondItem="KcH-At-24A" secondAttribute="trailing" constant="8" id="bjc-pc-RPR"/>
                 <constraint firstItem="KcH-At-24A" firstAttribute="top" secondItem="jBd-lj-TVz" secondAttribute="bottom" constant="12" id="fgD-NR-avN"/>
-                <constraint firstItem="DSU-UV-dVV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="22" id="ngg-vO-s0g"/>
-                <constraint firstItem="bwB-Qt-AER" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="qDJ-NY-mnt"/>
-                <constraint firstItem="vJV-bX-Upe" firstAttribute="top" secondItem="bwB-Qt-AER" secondAttribute="bottom" constant="8" id="qRz-PI-RRB"/>
+                <constraint firstItem="DSU-UV-dVV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="ngg-vO-s0g"/>
                 <constraint firstItem="jBd-lj-TVz" firstAttribute="leading" secondItem="DSU-UV-dVV" secondAttribute="trailing" constant="10" id="txA-G3-H3E"/>
             </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="EgA-fj-kb8"/>
+                    <exclude reference="Smx-y1-eVF"/>
+                    <exclude reference="txA-G3-H3E"/>
+                    <exclude reference="6Pf-uz-ofM"/>
+                    <exclude reference="bjc-pc-RPR"/>
+                    <exclude reference="fgD-NR-avN"/>
+                </mask>
+            </variation>
         </view>
     </objects>
 </document>
